# pv-kwp-inference

./: .env.example  .gitignore  LICENSE.md  README.md  pyproject.toml
beispiele/: invoice_positions.csv
docs/: datenmodell.md
src/pv_kwp_inference/: __init__.py  cli.py  kwp.py
tests/: test_kwp.py
